# trainedml_module

./: .gitignore  DOC_UTILISATION.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
doc/source/: conf.py  modules.rst
doc/source/trainedml/: analyzer.rst  bivariate.rst  correlation.rst  histogram.rst  line.rst  missing.rst  multicollinearity.rst  normality.rst  outliers.rst  profiling.rst  target.rst
doc/source/trainedml/models/: logistic.rst  random_forest.rst
examples/: exemple_regression.py
src/trainedml/: __init__.py  __main__.py  analyzer.py  benchmark.py  cli.py  evaluation.py  figure.py  visualization.py
src/trainedml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/trainedml/data/: __init__.py  loader.py
src/trainedml/models/: __init__.py  base.py  factory.py  knn.py  logistic.py  random_forest.py  regressors.py
src/trainedml/utils/: __init__.py  factory.py
src/trainedml/viz/: __init__.py  bivariate.py  boxplot.py  correlation.py  distribution.py  heatmap.py  histogram.py  line.py  missing.py  multicollinearity.py  normality.py  outliers.py  profiling.py  target.py  vizs.py
tests/: __init__.py  test_heatmap.py  test_histogram.py  test_knn.py  test_line.py  test_logistic.py  test_multicollinearity.py  test_normality.py  test_outliers.py  test_profiling.py  test_random_forest.py  test_regressors.py
