[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trainedml"
version = "0.1.1"
description = "Simple ML training framework"
authors = [
  { name = "diamankayero", email = "diamanka.tck@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "plotly",
    "tqdm",
    "requests",
    "streamlit",
    "pooch",
    "statsmodels",
    "sphinx_rtd_theme"
]

[project.urls]
Homepage = "https://github.com/diamankayero/trainedml"
Issues = "https://github.com/diamankayero/trainedml"